<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ListPageGalleryFragment">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/listName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery_recycler_title"
        android:textAppearance="@style/TextMainStyle.SmallHeading"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_button" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back_button"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="26dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/chip_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="21dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listName">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/image_filter_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checkedChip="@id/filter_all"
                app:chipSpacingHorizontal="8dp"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_all"
                    style="@style/SkillCinemaChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_still"
                    style="@style/SkillCinemaChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/still" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_shooting"
                    style="@style/SkillCinemaChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shooting" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_poster"
                    style="@style/SkillCinemaChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poster" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_fan_art"
                    style="@style/SkillCinemaChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fan_art" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_promo"
                    style="@style/SkillCinemaChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/promo" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_concept"
                    style="@style/SkillCinemaChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/concept" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_wallpaper"
                    style="@style/SkillCinemaChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wallpaper" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_cover"
                    style="@style/SkillCinemaChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cover" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filter_screenshot"
                    style="@style/SkillCinemaChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screenshot" />

            </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listPageRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_scroll_view"
        tools:listitem="@layout/gallery_1_2_spans_item" />

</androidx.constraintlayout.widget.ConstraintLayout>