<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/app_name_image_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="38dp"
        android:src="@drawable/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/welcome_1_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:src="@drawable/welcome_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_menu_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/app_name_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="38dp"
                android:src="@drawable/app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/premieres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:text="@string/premieres"
                android:textAppearance="@style/TextMainStyle.Heading"
                app:layout_constraintStart_toStartOf="@id/app_name_image"
                app:layout_constraintTop_toBottomOf="@+id/app_name_image" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_all_premieres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="26dp"
                android:background="@color/transparent"
                android:text="@string/button_all"
                android:textAppearance="@style/TextMainStyle.Button14Blue"
                app:layout_constraintBottom_toBottomOf="@+id/premieres"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/premieres"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/premieresRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/premieres"
                tools:listitem="@layout/film_item" />

            <TextView
                android:id="@+id/popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/popular"
                android:textAppearance="@style/TextMainStyle.Heading"
                app:layout_constraintStart_toStartOf="@id/app_name_image"
                app:layout_constraintTop_toBottomOf="@+id/premieresRecycler" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_all_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="26dp"
                android:background="@color/transparent"
                android:text="@string/button_all"
                android:textAppearance="@style/TextMainStyle.Button14Blue"
                app:layout_constraintBottom_toBottomOf="@+id/popular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/popular"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/popular"
                tools:listitem="@layout/film_item" />

            <TextView
                android:id="@+id/films_filtered_1"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:singleLine="false"
                android:textAppearance="@style/TextMainStyle.Heading"
                app:layout_constraintStart_toStartOf="@id/app_name_image"
                app:layout_constraintTop_toBottomOf="@+id/popularRecycler" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_all_films_filtered_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="26dp"
                android:background="@color/transparent"
                android:text="@string/button_all"
                android:textAppearance="@style/TextMainStyle.Button14Blue"
                app:layout_constraintBottom_toBottomOf="@+id/films_filtered_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/films_filtered_1"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/films_filtered_1_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/films_filtered_1"
                tools:listitem="@layout/film_item" />

            <TextView
                android:id="@+id/top_250"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/top_250"
                android:textAppearance="@style/TextMainStyle.Heading"
                app:layout_constraintStart_toStartOf="@id/app_name_image"
                app:layout_constraintTop_toBottomOf="@+id/films_filtered_1_recycler" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_all_top_250"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="26dp"
                android:background="@color/transparent"
                android:text="@string/button_all"
                android:textAppearance="@style/TextMainStyle.Button14Blue"
                app:layout_constraintBottom_toBottomOf="@+id/top_250"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/top_250"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_250_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/top_250"
                tools:listitem="@layout/film_item" />

            <TextView
                android:id="@+id/films_filtered_2"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:singleLine="false"
                android:textAppearance="@style/TextMainStyle.Heading"
                app:layout_constraintStart_toStartOf="@id/app_name_image"
                app:layout_constraintTop_toBottomOf="@+id/top_250_recycler" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_all_films_filtered_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="26dp"
                android:background="@color/transparent"
                android:text="@string/button_all"
                android:textAppearance="@style/TextMainStyle.Button14Blue"
                app:layout_constraintBottom_toBottomOf="@+id/films_filtered_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/films_filtered_2"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/films_filtered_2_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/films_filtered_2"
                tools:listitem="@layout/film_item" />

            <TextView
                android:id="@+id/series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/series"
                android:textAppearance="@style/TextMainStyle.Heading"
                app:layout_constraintStart_toStartOf="@id/app_name_image"
                app:layout_constraintTop_toBottomOf="@+id/films_filtered_2_recycler" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_all_series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="26dp"
                android:background="@color/transparent"
                android:text="@string/button_all"
                android:textAppearance="@style/TextMainStyle.Button14Blue"
                app:layout_constraintBottom_toBottomOf="@+id/series"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/series" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/serials_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/series"
                tools:listitem="@layout/film_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>